--- a/charts/shoot-core/components/charts/metrics-server/templates/deployment.yaml
+++ b/charts/shoot-core/components/charts/metrics-server/templates/deployment.yaml
@@ -61,8 +61,8 @@ spec:
             cpu: 20m
             memory: 100Mi
           limits:
-            cpu: 100m
-            memory: 1Gi
+            cpu: 80m
+            memory: 100Mi
         volumeMounts:
         - name: metrics-server
           mountPath: /srv/metrics-server/tls
