--- a/charts/shoot-core/components/charts/kube-proxy/templates/kube-proxy-daemonset.yaml
+++ b/charts/shoot-core/components/charts/kube-proxy/templates/kube-proxy-daemonset.yaml
@@ -81,6 +81,9 @@ spec:
           requests:
             cpu: 20m
             memory: 64Mi
+          limits:
+            cpu: 100m
+            memory: 200Mi
         ports:
         - containerPort: {{ .Values.ports.metrics }}
           protocol: TCP
